--- a/src/app/posts/post-create/post-create.components.html
+++ b/src/app/posts/post-create/post-create.components.html
@@ -1,11 +1,12 @@
 <mat-card>
   <form (submit)="onAddPost(postForm)" #postForm="ngForm">
     <mat-form-field>
-      <input matInput type="text" name="title" ngModel required #title="ngModel">
+      <input matInput type="text" name="title" ngModel required placeholder="Post Title" #title="ngModel">
       <mat-error *ngIf="title.invalid">Please Enter a post Title.</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <textarea matInput rows="4" name="content" ngModel required #content="ngModel"></textarea>
+      <textarea matInput rows="4" name="content" ngModel required placeholder="Post Content"
+        #content="ngModel"></textarea>
       <mat-error *ngIf="content.invalid">Please Enter a post Content.</mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Save Post</button>
