--- a/src/app/posts/post-create/post-create.components.html
+++ b/src/app/posts/post-create/post-create.components.html
@@ -8,6 +8,10 @@
         #title="ngModel">
       <mat-error *ngIf="title.invalid">Please Enter a post Title.</mat-error>
     </mat-form-field>
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+      <input type="file" #filePicker />
+    </div>
     <mat-form-field>
       <textarea matInput rows="4" name="content" [ngModel]="post?.content" required placeholder="Post Content"
         #content="ngModel"></textarea>
