--- a/src/app/posts/post-create/post-create.components.html
+++ b/src/app/posts/post-create/post-create.components.html
@@ -2,20 +2,18 @@
   <mat-spinner *ngIf="isLoading">
 
   </mat-spinner>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field>
-      <input matInput type="text" name="title" [ngModel]="post?.title" required placeholder="Post Title"
-        #title="ngModel">
-      <mat-error *ngIf="title.invalid">Please Enter a post Title.</mat-error>
+      <input matInput type="text" formControlName="title" placeholder="Post Title">
+      <mat-error *ngIf="form.get('title').invalid">Please Enter a post Title.</mat-error>
     </mat-form-field>
     <div>
       <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
       <input type="file" #filePicker />
     </div>
     <mat-form-field>
-      <textarea matInput rows="4" name="content" [ngModel]="post?.content" required placeholder="Post Content"
-        #content="ngModel"></textarea>
-      <mat-error *ngIf="content.invalid">Please Enter a post Content.</mat-error>
+      <textarea matInput rows="4" formControlName="content" placeholder="Post Content"></textarea>
+      <mat-error *ngIf="form.get('content').invalid">Please Enter a post Content.</mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Save Post</button>
   </form>
